--- a/home.css
+++ b/home.css
@@ -161,5 +161,5 @@ footer{
     padding: 2rem;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: center;
 }
