--- a/home.css
+++ b/home.css
@@ -16,7 +16,7 @@ body {
     line-height: 1.5;
     color: #333;
     background: #f4f4f4;
-    background-color: #ffffff;
+    background-color: #5698B9;
 }
 
 header {
@@ -82,8 +82,6 @@ section {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: rgba(255, 255, 255, 0.7);
-    border-radius: 5%;
 }
 
 section img {
@@ -111,7 +109,7 @@ p {
     font-size: 1.5rem;
 }
 
-article {
+.vm {
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -152,6 +150,60 @@ figcaption {
     font-style: italic;
     color: #1f499d;
 }
+
+.card {
+    height: 254px;
+    width: 190px;
+    position: relative;
+    transition: all 0.4s cubic-bezier(0.645, 0.045, 0.355, 1);
+    border-radius: 1em;
+    box-shadow: 0 0 20px 8px #d0d0d0;
+    ;
+   }
+   
+    /*Image*/
+   .card-image {
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    transition: all 1s cubic-bezier(0.645, 0.045, 0.355, 1);
+    background: #0a3394;
+    background: linear-gradient(to top, #0a3394, #4286f4);
+   }
+   
+   /*Description */
+   .card-description {
+    display: flex;
+    position: absolute;
+    gap: 1em;
+    flex-direction: column;
+    background-color: #f5f5f5;
+    height: 70%;
+    bottom: 0;
+    border-radius: 1rem 1rem 0 0;
+    transition: all 1s cubic-bezier(0.645, 0.045, 0.355, 1);
+    padding: 1rem;
+   }
+   
+   /*Text*/
+   .text-title {
+    font-size: 1.4rem;
+    font-weight: 700;
+   }
+   
+   .text-body {
+    font-size: 1rem;
+    line-height: 150%;
+   }
+   
+   
+   /* Hover states */
+   
+   .card:hover .card-description {
+    transform: translateY(100%);
+   }
+   
+   
 
 footer{
     width: 100%;
