--- a/home.css
+++ b/home.css
@@ -62,7 +62,7 @@ h1 {
 }
 
 h2 {
-    font-size: 1.5rem;
+    font-size: 2rem;
     margin: 0;
     text-align: center;
     color: #1f499d
@@ -82,6 +82,7 @@ section {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    border-radius: 5%;
 }
 
 section img {
@@ -132,80 +133,38 @@ p {
     margin: 2rem;
 }
 
-figure {
+.card {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin: 1rem;
 }
 
-figure img {
+.card-description {
     width: 100%;
-    height: 100%;
-}
-
-figcaption {
-    text-align: center;
-    font-size: 1.5rem;
-    font-style: italic;
-    color: #1f499d;
-}
-
-.card {
-    height: 254px;
-    width: 190px;
-    position: relative;
-    transition: all 0.4s cubic-bezier(0.645, 0.045, 0.355, 1);
-    border-radius: 1em;
-    box-shadow: 0 0 20px 8px #d0d0d0;
-    ;
-   }
-   
-    /*Image*/
-   .card-image {
-    height: 100%;
-    width: 100%;
-    position: absolute;
-    transition: all 1s cubic-bezier(0.645, 0.045, 0.355, 1);
-    background: #0a3394;
-    background: linear-gradient(to top, #0a3394, #4286f4);
-   }
-   
-   /*Description */
-   .card-description {
     display: flex;
-    position: absolute;
-    gap: 1em;
     flex-direction: column;
-    background-color: #f5f5f5;
-    height: 70%;
-    bottom: 0;
-    border-radius: 1rem 1rem 0 0;
-    transition: all 1s cubic-bezier(0.645, 0.045, 0.355, 1);
+    justify-content: center;
+    align-items: center;
+    background-color: #192738;
+    color: #fff;
     padding: 1rem;
-   }
-   
-   /*Text*/
-   .text-title {
-    font-size: 1.4rem;
-    font-weight: 700;
-   }
-   
-   .text-body {
-    font-size: 1rem;
-    line-height: 150%;
-   }
-   
-   
-   /* Hover states */
-   
-   .card:hover .card-description {
-    transform: translateY(100%);
-   }
-   
-   
+}
 
-footer{
+h3 {
+    font-size: 1.5rem;
+    margin: 0;
+    text-align: center;
+    color: #1f499d
+}
+
+.card-image {
+    width: 100%;
+    height: 100%;
+}
+
+footer {
     width: 100%;
     background-color: #192738;
     color: #fff;
