--- a/home.css
+++ b/home.css
@@ -76,6 +76,13 @@ main {
     align-items: center;
 }
 
+.pilot {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 section {
     width: 70%;
     display: flex;
