--- a/about.css
+++ b/about.css
@@ -74,6 +74,7 @@ main {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin: 0 1rem;
 }
 
 footer {
@@ -90,4 +91,47 @@ footer {
 p {
     padding: 1rem;
     font-size: 1.5rem;
+}
+
+table {
+    border-collapse: collapse;
+    font-size: 5rem;
+}
+
+section {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+article {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.status {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+h3 {
+    font-size: 2rem;
+    margin: 0;
+    text-align: center;
+    color: #1f499d
+}
+
+h4 {
+    font-size: 1.5rem;
+    margin: 0;
+    text-align: center;
+    color: #1f499d
 }
