--- a/about.css
+++ b/about.css
@@ -65,7 +65,8 @@ h2 {
     font-size: 2rem;
     margin: 0;
     text-align: center;
-    color: #1f499d
+    color: #1f499d;
+    padding: 1rem;
 }
 
 main {
@@ -74,7 +75,7 @@ main {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 0 1rem;
+    padding: 2rem;
 }
 
 footer {
@@ -98,12 +99,25 @@ table {
     font-size: 5rem;
 }
 
+td, th {
+    padding: 0.3rem;
+}
+
 section {
     width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+
+section div {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem;
 }
 
 article {
