--- a/projects.css
+++ b/projects.css
@@ -74,6 +74,7 @@ main {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding: 2rem;
 }
 
 footer {
@@ -91,3 +92,31 @@ p {
     padding: 1rem;
     font-size: 1.5rem;
 }
+
+h3 {
+    font-size: 1.5rem;
+    margin: 0;
+    text-align: center;
+    color: #1f499d
+}
+
+article {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+article div {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 1rem;
+}
+
+article div img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
