--- a/about.css
+++ b/about.css
@@ -132,6 +132,7 @@ article {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding: 0 2rem;
 }
 
 .status {
