--- a/contact.css
+++ b/contact.css
@@ -74,6 +74,7 @@ main {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding: 2rem;
 }
 
 footer {
@@ -89,5 +90,40 @@ footer {
 
 p {
     padding: 1rem;
+    font-size: 1.5rem;
+}
+
+form {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 2rem;
+}
+
+input {
+    width: 70%;
+    font-size: 1.5rem;
+    border: 1px solid #333;
+}
+
+textarea {
+    width: 70%;
+    padding: 1rem;
+    margin: 1rem;
+    font-size: 1.5rem;
+    border: 1px solid #333;
+}
+
+button {
+    width: 50%;
+    font-size: 1.5rem;
+    border: 1px solid #333;
+    background-color: #1f499d;
+    color: #fff;
+}
+
+label {
     font-size: 1.5rem;
 }
