--- a/services.css
+++ b/services.css
@@ -5,11 +5,6 @@
     margin: 0;
 }
 
-html {
-    height: 100vh;
-    width: 100vw;
-}
-
 body {
     font-family: 'Open Sans', sans-serif;
     font-size: 1.6rem;
@@ -54,25 +49,20 @@ a {
     padding: 1rem;
 }
 
-h1 {
-    font-size: 2.5rem;
-    margin: 0;
-    text-align: center;
-    color: #192738;
-}
-
 h2 {
     font-size: 2rem;
     margin: 0;
     text-align: center;
-    color: #1f499d
+    color: #1f499d;
+    text-transform: uppercase;
 }
 
 h3 {
     font-size: 1.5rem;
-    margin: 0;
+    margin: 1rem;
     text-align: center;
-    color: #1f499d
+    color: #1f499d;
+    text-transform: uppercase;
 }
 
 main {
@@ -100,8 +90,9 @@ p {
     font-size: 1.5rem;
 }
 
-li {
+section li {
     font-size: 1rem;
+    margin: 1rem;
 }
 
 .safety {
@@ -113,4 +104,61 @@ li {
 
 .safety img {
     border-radius: 10%;
+}
+
+@media screen and (min-width: 768px) {
+
+    nav li {
+        font-size: 2rem;
+    }
+
+    h2 {
+        font-size: 2.5rem;
+        padding: 2rem;
+    }
+
+    section li {
+        font-size: 2rem;
+    }
+
+    h3 {
+        font-size: 2rem;
+    }
+
+    p {
+        padding: 2rem;
+        font-size: 2rem;
+    }
+
+    footer p {
+        font-size: 2rem;
+    }
+}
+
+@media screen and (min-width: 1024px) {
+
+    nav li {
+        font-size: 2.5rem;
+    }
+
+    section li {
+        font-size: 2.5rem;
+    }
+
+    h2 {
+        font-size: 3rem;
+    }
+
+    h3 {
+        font-size: 2.5rem;
+    }
+
+    p {
+        padding: 3rem;
+        font-size: 3rem;
+    }
+
+    footer p {
+        font-size: 2.5rem;
+    }
 }
