--- a/about.css
+++ b/about.css
@@ -5,11 +5,6 @@
     margin: 0;
 }
 
-html {
-    height: 100vh;
-    width: 100vw;
-}
-
 body {
     font-family: 'Open Sans', sans-serif;
     font-size: 1.6rem;
@@ -99,7 +94,8 @@ table {
     font-size: 5rem;
 }
 
-td, th {
+td,
+th {
     padding: 0.3rem;
 }
 
@@ -155,4 +151,77 @@ h4 {
     margin: 0;
     text-align: center;
     color: #1f499d
+}
+
+@media screen and (min-width: 768px) {
+
+    li {
+        font-size: 2rem;
+    }
+
+    h2 {
+        font-size: 2.5rem;
+    }
+
+    p {
+        padding: 2rem;
+        font-size: 2rem;
+    }
+
+    table {
+        font-size: 7rem;
+    }
+
+    section div img {
+        width: 50%;
+        height: 50%;
+    }
+
+    h3 {
+        font-size: 2.5rem;
+    }
+
+    h4 {
+        font-size: 2rem;
+    }
+
+    footer p {
+        font-size: 2rem;
+    }
+}
+
+@media screen and (min-width: 1024px) {
+
+    li {
+        font-size: 2.5rem;
+    }
+
+    h1 {
+        font-size: 4rem;
+    }
+
+    h2 {
+        font-size: 3rem;
+    }
+
+    p {
+        padding: 3rem;
+        font-size: 3rem;
+    }
+
+    h3 {
+        font-size: 3rem;
+    }
+
+    h4 {
+        font-size: 2.5rem;
+    }
+
+    table {
+        font-size: 10rem;
+    }
+
+    footer p {
+        font-size: 2.5rem;
+    }
 }
