--- a/contact.css
+++ b/contact.css
@@ -5,11 +5,6 @@
     margin: 0;
 }
 
-html {
-    height: 100vh;
-    width: 100vw;
-}
-
 body {
     font-family: 'Open Sans', sans-serif;
     font-size: 1.6rem;
@@ -54,13 +49,6 @@ a {
     padding: 1rem;
 }
 
-h1 {
-    font-size: 2.5rem;
-    margin: 0;
-    text-align: center;
-    color: #192738;
-}
-
 h2 {
     font-size: 2rem;
     margin: 0;
@@ -70,6 +58,7 @@ h2 {
 
 main {
     width: 100%;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -86,11 +75,6 @@ footer {
     display: flex;
     flex-direction: row;
     justify-content: center;
-}
-
-p {
-    padding: 1rem;
-    font-size: 1.5rem;
 }
 
 form {
@@ -126,4 +110,71 @@ button {
 
 label {
     font-size: 1.5rem;
+}
+
+p {
+    padding: 1rem;
+    font-size: 1.5rem;
+}
+
+@media screen and (min-width: 768px) {
+    li {
+        font-size: 2rem;
+    }
+
+    h2 {
+        font-size: 2.5rem;
+        padding: 2rem;
+    }
+
+    input {
+        font-size: 2rem;
+    }
+
+    textarea {
+        font-size: 2rem;
+    }
+
+    button {
+        font-size: 2rem;
+    }
+
+    label {
+        font-size: 2rem;
+    }
+
+    footer p {
+        font-size: 2rem;
+    }
+}
+
+@media screen and (min-width: 1024px) {
+
+    nav li {
+        font-size: 2.5rem;
+    }
+
+    h2 {
+        font-size: 3rem;
+    }
+
+    input {
+        font-size: 2.5rem;
+    }
+
+    textarea {
+        font-size: 2.5rem;
+    }
+
+    button {
+        font-size: 2.5rem;
+    }
+
+    label {
+        font-size: 2.5rem;
+    }
+
+    footer p {
+        font-size: 2.5rem;
+    }
 }
