--- a/projects.css
+++ b/projects.css
@@ -5,11 +5,6 @@
     margin: 0;
 }
 
-html {
-    height: 100vh;
-    width: 100vw;
-}
-
 body {
     font-family: 'Open Sans', sans-serif;
     font-size: 1.6rem;
@@ -52,13 +47,6 @@ a {
     text-decoration: none;
     color: #fff;
     padding: 1rem;
-}
-
-h1 {
-    font-size: 2.5rem;
-    margin: 0;
-    text-align: center;
-    color: #192738;
 }
 
 h2 {
@@ -120,3 +108,46 @@ article div img {
     object-fit: cover;
 }
 
+@media screen and (min-width: 768px) {
+    li {
+        font-size: 2rem;
+    }
+
+    h2 {
+        font-size: 2.5rem;
+        padding: 2rem;
+    }
+
+    h3 {
+        font-size: 2rem;
+        padding: 2rem;
+    }
+
+    footer p {
+        font-size: 2rem;
+    }
+}
+
+@media screen and (min-width: 1024px) {
+
+    nav li {
+        font-size: 2.5rem;
+    }
+
+    h2 {
+        font-size: 3rem;
+    }
+
+    h3 {
+        font-size: 2.5rem;
+    }
+
+    p {
+        padding: 3rem;
+        font-size: 3rem;
+    }
+
+    footer p {
+        font-size: 2.5rem;
+    }
+}
