--- a/home.css
+++ b/home.css
@@ -23,6 +23,7 @@ header {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
 }
 
 header img {
