--- a/about.css
+++ b/about.css
@@ -23,10 +23,12 @@ header {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
 }
 
 header img {
-    width: 50px;
+    width: 5rem;
+    height: 5rem;
     border-radius: 50%;
 }
 
