--- a/about.css
+++ b/about.css
@@ -147,6 +147,11 @@ article {
     align-items: center;
 }
 
+.status li {
+    font-size: 1.2rem;
+    text-align: center;
+    padding: 0.3rem;
+}
 
 h3 {
     font-size: 2rem;
