--- a/home.css
+++ b/home.css
@@ -101,7 +101,8 @@ banner {
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 88.5vh;
+    height: 95vh;
+    border-radius: 0px 0px 15px 15px;
 }
 
 banner p {
@@ -157,6 +158,7 @@ article h2 {
     background-color: #192738;
     color: #fff;
     padding: 1rem;
+    border-radius: 10px;
 }
 
 h3 {
@@ -169,6 +171,7 @@ h3 {
 .card-image {
     width: 100%;
     height: 100%;
+    border-radius: 10px;
 }
 
 footer {
@@ -343,55 +346,7 @@ footer {
 @media screen and (min-width: 1921px) {
 
     body {
-        width: 60%;
+        width: 70%;
         margin: 0 auto;
-    }
-
-    header img {
-        width: 10rem;
-        height: 10rem;
-    }
-
-    li {
-        font-size: 4rem;
-    }
-
-    h1 {
-        font-size: 6rem;
-    }
-
-    h2 {
-        font-size: 5rem;
-    }
-
-    h3 {
-        font-size: 4rem;
-    }
-
-    section img {
-        width: 25rem;
-        height: 25rem;
-    }
-
-    banner p {
-        padding: 25rem;
-        font-size: 6rem;
-    }
-
-    p {
-        padding: 5rem;
-        font-size: 4rem;
-    }
-
-    article h2 {
-        font-size: 5rem;
-    }
-
-    .vm {
-        background-size: 20%;
-    }
-
-    footer p {
-        font-size: 4rem;
     }
 }
