--- a/home.css
+++ b/home.css
@@ -102,7 +102,7 @@ banner {
     align-items: center;
     width: 100%;
     height: 95vh;
-    border-radius: 0px 0px 15px 15px;
+    border-radius: 0px 0px 10px 10px;
 }
 
 banner p {
@@ -158,7 +158,7 @@ article h2 {
     background-color: #192738;
     color: #fff;
     padding: 1rem;
-    border-radius: 10px;
+    border-radius: 0 0 10px 10px;
 }
 
 h3 {
@@ -171,7 +171,7 @@ h3 {
 .card-image {
     width: 100%;
     height: 100%;
-    border-radius: 10px;
+    border-radius: 10px 10px 0 0;
 }
 
 footer {
