--- a/about.css
+++ b/about.css
@@ -292,6 +292,12 @@ h4 {
         font-size: 2rem;
     }
 
+    section div img {
+        width: 15%;
+        height: 15%;
+        border-radius: 5%;
+    }
+
     h3 {
         font-size: 2.5rem;
     }
