--- a/about.css
+++ b/about.css
@@ -321,3 +321,10 @@ h4 {
         width: 100%;
     }
 }
+
+@media screen and (min-width: 1921px) {
+    body {
+        width: 70%;
+        margin: 0 auto;
+    }
+}
