--- a/services.css
+++ b/services.css
@@ -5,6 +5,10 @@
     margin: 0;
 }
 
+:root {
+    font-size: calc(1rem + 0.5vw, 1.5rem);
+}
+
 body {
     font-family: 'Open Sans', sans-serif;
     font-size: 1.6rem;
