--- a/about.css
+++ b/about.css
@@ -323,8 +323,8 @@ h4 {
 }
 
 @media screen and (min-width: 1921px) {
-    body {
-        width: 70%;
+    main {
+        width: 60%;
         margin: 0 auto;
     }
 }
