--- a/home.css
+++ b/home.css
@@ -349,8 +349,8 @@ footer {
 
 @media screen and (min-width: 1921px) {
 
-    body {
-        width: 70%;
+    main {
+        width: 60%;
         margin: 0 auto;
     }
 }
