--- a/services.css
+++ b/services.css
@@ -168,3 +168,60 @@ section li {
         font-size: 2rem;
     }
 }
+
+@media screen and (min-width: 1200px) {
+
+    nav li {
+        font-size: 3.5rem;
+    }
+
+    section li {
+        font-size: 3rem;
+    }
+
+    h2 {
+        font-size: 3.5rem;
+    }
+
+    h3 {
+        font-size: 3rem;
+    }
+
+    p {
+        padding: 3rem;
+        font-size: 2.5rem;
+    }
+
+    footer p {
+        font-size: 2.5rem;
+    }
+}
+
+@media screen and (min-width: px) {
+
+    nav li {
+        font-size: 4rem;
+    }
+
+    section li {
+        font-size: 3.5rem;
+    }
+
+    h2 {
+        font-size: 4rem;
+    }
+
+    h3 {
+        font-size: 3.5rem;
+    }
+
+    p {
+        padding: 3rem;
+        font-size: 3rem;
+    }
+
+    footer p {
+        font-size: 3rem;
+    }
+}
+
