--- a/contact.css
+++ b/contact.css
@@ -198,3 +198,49 @@ p {
         font-size: 2rem;
     }
 }
+
+@media screen and (min-width: 1200px) {
+    main {
+        height: 75.1vh;
+    }
+
+    nav li {
+        font-size: 3rem;
+    }
+
+    h2 {
+        font-size: 3rem;
+    }
+
+    input {
+        font-size: 2rem;
+    }
+
+    textarea {
+        font-size: 2rem;
+    }
+
+    button {
+        font-size: 2rem;
+    }
+
+    label {
+        font-size: 2rem;
+    }
+
+    footer p {
+        font-size: 2rem;
+    }
+
+    p {
+        padding: 2rem;
+        font-size: 2rem;
+    }
+}
+
+@media screen and (min-width: 1921px) {
+    main {
+        width: 60%;
+        margin: 0 auto;
+    }
+}
