--- a/projects.css
+++ b/projects.css
@@ -162,3 +162,34 @@ article div img {
         font-size: 2rem;
     }
 }
+
+@media screen and (min-width: 1200px) {
+    
+    nav li {
+        font-size: 3.5rem;
+    }
+
+    h2 {
+        font-size: 3.5rem;
+    }
+
+    h3 {
+        font-size: 3rem;
+    }
+
+    p {
+        padding: 3rem;
+        font-size: 2.5rem;
+    }
+
+    footer p {
+        font-size: 2rem;
+    }
+}
+
+@media screen and (min-width: 1921px) {
+    main {
+        width: 60%;
+        margin: 0 auto;
+    }
+}
