changed the width on pages

--- a/about.css
+++ b/about.css
@@ -15,6 +15,10 @@ body {
 }
 
 header {
+    background-color: #192738;
+}
+
+.header {
     width: 100%;
     background-color: #192738;
     color: #fff;
@@ -323,6 +327,12 @@ h4 {
 }
 
 @media screen and (min-width: 1921px) {
+
+    .header {
+        width: 60%;
+        margin: 0 auto;
+    }
+    
     main {
         width: 60%;
         margin: 0 auto;
